  include/config.h Makefile: Add PMMU tree & enable data caching for
  68030 processors. (RFB)
- aes/geminit.c bios/bios.c bios/blkdev.c bios/ikbd.c bios/ikbd.h
  bios/initinfo.c: Use #defines instead of magic numbers for mode keys. (RFB)

2013-01-28
- bios/blkdev.c: Disable boot sector execution when Control is held
  down. (RFB)
- bios/68030_pmmu.S: Moved read-only data to SECTION_RODATA. (VRI)
- po/fr.po: Added missing translations. (VRI)
- desk/deskapp.c desk/desktop.def desk/desktop.rsc: Added "DISK" and
  "TRASH" from the desktop to the translatable strings. (RFB)
- bios/disk.c: Support DOS hard disk with no MBR. (RFB)

2013-01-29
- po/fi.po: Updated. Contributed by Eero Tamminen. (VRI)
- Makefile bios/amiga.c bios/amiga.h bios/amiga2.S bios/aros.c bios/aros.h
  bios/aros2.S: Split amiga.c to aros.c due to license issues. (VRI)

2013-01-30
- aes/gemsuper.c: Code cleanup: eliminate OB_ macros. (RFB)
- desk/deskapp.c: Handle internationalization of desktop DISK & TRASH
  names just like TOS. (RFB)
- bios/acsi.c bios/floppy.c bios/machine.c bios/machine.h include/config.h:
  Proper _FRB handing to fix floppy routines on Amiga with Alt Ram. (VRI)
- po/de.po: Updated German translations. (THH)
- bios/acsi.c: Code cleanup: removed GOTOs & simplified do_acsi_rw(). (RFB)

2013-01-31
- vdi/vdi_fill.c: Fixed v_contourfill() with negative index. (VRI)
- Makefile bios/68040_pmmu.S bios/processor.S include/config.h: Added
  experimental support for 68040 PMMU initialization. This does the same as
  set_mmu.prg, which is now useless. Contributed by Miro Kropáček. (VRI)

2013-02-01
- aes/gemobed.c: Always center dialogs, even with high resolutions. (VRI)
- desk/desktop.rsc po/*.po: Display doc\license.txt with \ in about box. (VRI)
- bios/initinfo.c: Center the initinfo screen vertically. (VRI)
- bios/acsi.c bios/floppy.c bios/processor.h bios/processor.S
  include/asmdefs.h: Fix bug: caches were not flushed/invalidated when
  DMA was used. (RFB)