@@ -203,7 +203,7 @@ void * get_start_addr(const WORD x, const WORD y)
 
     /* init adress counter */
     addr = v_bas_ad;                    /* start of screen */
-    addr += (x&0xfff0)>>shft_off;       /* add x coordinate part of addr */
+    addr += (x&0xfff0)>>shift_offset[v_planes]; /* add x coordinate part of addr */
     addr += (LONG)y * v_lin_wr;         /* add y coordinate part of addr */
 
     return addr;
